--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
   <body>
     <div class="container">
      <%= render 'layouts/header' %>
-     <section class="round">
-       <%= yield %>
-     </section>
-     <%= render 'layouts/footer' %>
+      <section class="round">
+        <%= yield %>
+      </section>
+      <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
